viacej dokumentácie+pár úprav
